--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/native-stack": "^6.9.1",
     "react": "18.1.0",
     "react-native": "0.70.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.5.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
