--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.70.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.3.1",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.5.0",
