--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
