updated session to include account and checking jwt date when logging in

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "jwt-decode": "^3.1.2",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-chart-kit": "^6.12.0",
@@ -32,6 +33,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
+    "@types/jwt-decode": "^3.1.0",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.4",
     "@types/react-native-vector-icons": "^6.4.12",
