--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "jwt-decode": "^3.1.2",
     "react": "18.1.0",
     "react-native": "0.70.4",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.8.0",
@@ -25,7 +24,8 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.5.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
