--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "jwt-decode": "^3.1.2",
+    "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-element-dropdown": "^2.3.1",
@@ -31,7 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/jwt-decode": "^3.1.0",
@@ -39,12 +40,15 @@
     "@types/react-native": "^0.70.4",
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
+    "eslint": "7",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react-native": "^4.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "prettier": "^2.8.3",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
