--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "SocFit",
+  "name": "Uplifting",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "pods": "cd ios && pod install && cd ../",
+    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "test": "jest"
   },
   "dependencies": {
-    "@react-native-camera-roll/camera-roll": "^5.2.0",
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.1",
-    "@react-navigation/stack": "^6.3.12",
-    "jwt-decode": "^3.1.2",
-    "native-base": "^3.4.25",
-    "react": "18.1.0",
-    "react-native": "0.70.4",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.8.0",
@@ -28,7 +18,16 @@
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.5.0",
     "react-native-vector-icons": "^9.2.0",
-    "victory-native": "^36.6.8"
+    "victory-native": "^36.6.8",
+    "@react-native-camera-roll/camera-roll": "^5.2.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.12",
+    "jwt-decode": "^3.1.2",
+    "native-base": "^3.4.25",
+    "react": "18.2.0",
+    "react-native": "0.71.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -51,17 +50,10 @@
     "metro-react-native-babel-preset": "0.72.3",
     "prettier": "^2.8.3",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "@babel/preset-env": "^7.14.0"
   },
   "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
+    "preset": "react-native"
   }
 }
