--- a/package.json
+++ b/package.json
@@ -10,15 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "react-native-element-dropdown": "^2.3.1",
-    "react-native-encrypted-storage": "^4.0.3",
-    "react-native-gesture-handler": "^2.8.0",
-    "react-native-modal": "^13.0.1",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-native-svg": "^13.5.0",
-    "react-native-vector-icons": "^9.2.0",
-    "victory-native": "^36.6.8",
     "@react-native-camera-roll/camera-roll": "^5.2.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -27,10 +18,21 @@
     "jwt-decode": "^3.1.2",
     "native-base": "^3.4.25",
     "react": "18.2.0",
-    "react-native": "0.71.0"
+    "react-native": "0.71.0",
+    "react-native-date-picker": "^4.2.9",
+    "react-native-element-dropdown": "^2.3.1",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.5.0",
+    "react-native-vector-icons": "^9.2.0",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.14.0",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
@@ -50,8 +52,7 @@
     "metro-react-native-babel-preset": "0.72.3",
     "prettier": "^2.8.3",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3",
-    "@babel/preset-env": "^7.14.0"
+    "typescript": "^4.8.3"
   },
   "jest": {
     "preset": "react-native"
