--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-camera-roll/camera-roll": "^5.2.0",
+    "@react-native-community/netinfo": "^9.3.7",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.12",
+    "amazon-cognito-identity-js": "^6.1.2",
+    "aws-amplify": "^5.0.18",
+    "aws-amplify-react-native": "^7.0.2",
     "jwt-decode": "^3.1.2",
     "native-base": "^3.4.25",
     "react": "18.2.0",
@@ -42,6 +48,7 @@
     "@types/react-native": "^0.70.4",
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
     "eslint": "7",
